--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <img src="2%20гис.png" class="card-img-top" alt="" >
             <div  class="card-body">
 
-            <a href="https://go.2gis.com/6chdv" class="btn btn-primary" style="font-size: 2rem;">2 ГИС </a></div>
+            <a href="https://go.2gis.com/j5ibi" class="btn btn-primary" style="font-size: 2rem;">2 ГИС </a></div>
         </div>
   </div>
      <div class="col">
